--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Unify | Welcome...</title>
+    <title>NCCM GRUP | 404...</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -37,7 +37,7 @@
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-            <a href="/"><img id="logo-header" src="assets/img/logo1-default.png" alt="Logo"></a>
+            <a href="/"><h2><b>NCCM GRUP</b></h2></a>
         </div><!-- /logo -->
 
         <!-- Menu -->
@@ -64,27 +64,9 @@
 <!--=== Content Part ===-->
 <div class="container">
   <div class="row-fluid page-404">
-      <p><i>404</i> <span>The Page cannot be found</span></p>
+      <p><i>404</i><span>This Page cannot be found</span></p>
     </div><!--/row-fluid-->
 </div><!--/container-->
 <!--=== End Content Part ===-->
-
-<!-- JS Global Compulsory -->
-<script type="text/javascript" src="assets/js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
-<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<!-- JS Implementing Plugins -->
-<script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
-<!-- JS Page Level -->
-<script type="text/javascript" src="assets/js/app.js"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-        App.init();
-    });
-</script>
-<!--[if lt IE 9]>
-    <script src="assets/js/respond.js"></script>
-<![endif]-->
-
 </body>
 </html>
