--- a/public/404.html
+++ b/public/404.html
@@ -54,7 +54,7 @@
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
         <ul class="pull-right breadcrumb">
-            <li><a href="/">Home</a> <span class="divider">/</span></li>
+            <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
             <li class="active">404</li>
         </ul>
     </div><!--/container-->
